# book-ocr

./: .coverage  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  boocr.spec  debug_run.py  list_mobile.txt  pyproject.toml  pytest.ini  requirements.txt
.cursor/rules/: my-reule.mdc
.github/workflows/: ci-build.yml  ci-lint.yml  ci-test.yml  release.yml
boocr/: __init__.py  cli.py  col_detect.py  composer.py  converter.py  dataclasses.py  extract_pages_cli.py  image_proc.py  ocr.py  ocr_cli.py  ocr_model.py  pdf_utils.py  pipeline.py  preprocess_cli.py
book_ocr/: __init__.py  _logging_core.py  cli.py  logger.py
docs/: prd.md  project_planning.md  task01.md  task04.md  task07.md  tasks.md  technical_architecture.md  technical_design.md  technical_principles.md
docs/tasks/: task02.md  task03.md  task05.md  task06.md  task08.md  task09_logging.md  task10.md
scripts/: analyze_ocr_debug.py  debug_engine.py  debug_ocr_output.py  quick_auto_det.py  run_e2e_tests.py  test_pponnx.py
tests/: __init__.py  conftest.py  test_cli.py  test_col_detect.py  test_composer.py  test_converter.py  test_example.py  test_image_proc.py  test_logger.py  test_ocr.py  test_ocr_model.py  test_ocr_small_sample.py  test_pdf_utils.py
