[project]
name = "book-ocr"
version = "0.1.0"
description = "古籍竖排繁简对照生成工具"
authors = [
    {name = "YOUR_NAME", email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.poetry]
packages = [{ include = "book_ocr" }]

[tool.poetry.scripts]
boocr = "book_ocr.cli:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
