[tool.poetry]
name = "book-ocr"
version = "0.1.0"
description = "古籍竖排繁简对照生成工具"
authors = ["YOUR_NAME <you@example.com>"]
readme = "README.md"
packages = [{ include = "book_ocr" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"  # 确保兼容性
typer = "^0.9.0"  # CLI框架
pydantic = "^2.5.0"  # 数据模型与配置校验
pyyaml = "^6.0.1"  # YAML解析
loguru = "^0.7.0"  # 日志
pillow = "^10.1.0"  # 图像处理
opencv-python = "^4.8.0"  # 图像处理：二值化、去倾斜、分列
paddleocr = "^2.7.0"  # OCR引擎
opencc-python-reimplemented = "^0.1.7"  # 繁简转换
pymupdf = "^1.23.0"  # PDF读写与文本嵌入
tqdm = "^4.66.0"  # 进度条
paddlepaddle-gpu = { version = "^2.5.0", optional = true }  # GPU加速

[tool.poetry.extras]
gpu = ["paddlepaddle-gpu"]  # GPU加速

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.4"
mypy = "^1.6.1"
pytest = "^7.4.3"
pytest-benchmark = "^4.0.0"
pre-commit = "^3.5.0"

[tool.poetry.scripts]
boocr = "book_ocr.cli:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
extend-select = ["I"]   # isort
fix = true

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
